fix minor layout issue

--- a/pages/dashboard/components/Timeline/styles.styl
+++ b/pages/dashboard/components/Timeline/styles.styl
@@ -36,7 +36,7 @@ ol
         height: 1rem
         line-height: 1.6rem
         margin-right: 0.8rem
-        vertical-align: top
+        vertical-align: middle
         width: 1rem
       &.running sup
         background: #25da43
